demo-app/pacman/base/guestbook-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-ns
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
