demo-app/pacman/base/pacman-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pacman-ns
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
