demo-app/pacman/base/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman-gitops # guestbook-ui
  namespace: guestbook-ns
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: pacman-gitops # guestbook-ui
