demo-app/pacman/base/pacman-ui-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pacman-gitops # guestbook-ui
  namespace: pacman-ns
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: pacman-gitops # guestbook-ui
