demo-app/pacman/base/pacman-ui-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pacman-gitops
  namespace: pacman-ns
  labels:
    app: pacman-gitops
spec:
  to:
    kind: Service
    name: pacman-gitops
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
